--- a/day2/day2.css
+++ b/day2/day2.css
@@ -7,22 +7,40 @@ img{
     height: 100%;
     width:100%
 }
+header{
+    background-color: #363636;
+    border-radius: 6px;
+    color: white;
+    width: 86%;
+    margin: auto;
+    .box{
+        width: 45%;
+        display: flex;
+        justify-content: space-between;
+        padding-top: 20px;
+        padding-left: 40px;
+        padding-bottom: 20px;
+    }
+}
 main{
+    width: 82%;
+    margin: auto;
+    margin-top: 30px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 10px;
     .box1{
         grid-column: 1/3;
         position: relative;
+        p{
+            font-weight: ;
+        }
 
         .container{
-            background-color: black;
             color: white;
             position: absolute;
             left: 15px;
-            bottom: 10px;
-            animation: tien 4s ease-in-out  5 alternate ;
-           
+            bottom: 10px; 
         }
     }
     .box2{
@@ -37,7 +55,7 @@ main{
     }
     .box{
         position: relative;
-        p{
+        h3{
             width: 100%;
             text-align: center;
             color: white;
@@ -45,16 +63,4 @@ main{
             bottom: 10px;
         }
     }
-}
-@keyframes tien{
-    from{
-        transform: scale(100%);
-        color: white;
-        left: 0%;
-        }
-    to{
-        transform:scale(50%);
-        color:yellow; 
-        left: 100%;
-    }    
 }
